# AskAnswer

./: .env.example  .gitignore  2026-05-06-145508-docsenterprise-persistence-planmd.txt  CHANGELOG.md  CLAUDE.md  Node.py  README.md  State.py  TODO.md  cli.py  graph.py  load.py  pyproject.toml  settings.example.json  tool.py
.github/workflows/: ci.yml
askanswer/: __main__.py  _react_internals.py  answering.py  audit.py  clarify.py  cli.py  confirmations.py  context.py  graph.py  helix_mcp.py  load.py  mcp.py  mcp_profile.py  nodes.py  persistence.py  pricing.py  react.py  registry.py  routing.py  runner.py  schema.py  server.py  settings.py  state.py  timetravel.py  tools.py  ui_input.py  ui_select.py  ui_spinner.py  wire.py
askanswer/cli/: __init__.py  app.py  confirm.py  progress.py  render.py  repl.py  stream.py  text.py  theme.py
askanswer/cli/commands/: __init__.py  _common.py  audit.py  edit.py  mcp.py  mcp_view.py  model.py  threads.py  timetravel.py  transfer.py
askanswer/decision/: agent.py  decision_tool.py
askanswer/helix/: agent.py  helix_tool.py  nodes.py  state.py
askanswer/intents/: __init__.py  base.py  chat.py  decision.py  file_read.py  helix.py  math.py  research.py  search.py  sql.py
askanswer/research/: agent.py  nodes.py  research_tool.py
askanswer/sqlagent/: sql_agent.py  sql_interact.py  sql_node.py  sql_tool.py
askanswer/telemetry/: __init__.py  langsmith.py  otel.py
docs/: bug-risk-review-2026-05-08.md  claude-code-architecture-study.md  cli-references-pi-mono-deepseek-tui.md  enterprise-application-challenges.md  enterprise-persistence-plan.md  helix-subgraph-plan.md  important-documentation-c2-clarification.md  important-documentation-c3-http-sse-server.md  important-documentation-d1-routing-context-cost-eval.md  important-documentation-verification-matrix.md  monitoring-plan.md  orchestration-extensibility-plan.md  phase-1-2-plan.md  possibility-space-execution-plan.md  possibility-space-exploration.md  review-1c210dc-cli-revamp.md
evals/: README.md  golden_intents.jsonl  run_intent_eval.py
plan-docs/: 00-direction-and-goals.md  01-spec.md  02-execution-plan.md
plan-docs/mem/: architecture-extensibility.md  architecture-orchestration.md  architecture-runtime.md  architecture-subgraphs.md  commands.md  conventions.md  external-docs.md
tests/: conftest.py  test_cli_stream.py  test_confirmations.py  test_graph.py  test_intents.py  test_mcp_profile.py  test_persistence.py  test_registry.py  test_settings.py  test_shell_tty.py  test_telemetry.py  test_ui_input_resize.py  test_ui_select.py
web/: index.html  style.css
