[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "askanswer"
version = "0.1.0"
description = "AskAnswer 命令行搜索助手"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0",
    "langchain-core>=0.3.0",
    "langgraph>=1.1.5",
    "langgraph-checkpoint-sqlite>=2.0",
    "mcp",
    "tavily-python",
    "python-dotenv",
    "rich",
    "markitdown",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
askanswer = "askanswer.cli:main"
# 重新 pip install -e 前也可用 `python -m askanswer.server` 启动（server.py 带 __main__ 守卫）。
askanswer-server = "askanswer.server:main"

[tool.setuptools.packages.find]
include = ["askanswer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
