[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "askanswer"
version = "0.1.0"
description = "AskAnswer 命令行搜索助手"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.5",
    "langgraph-checkpoint-sqlite>=2.0",
    "mcp",
    "tavily-python",
    "python-dotenv",
    "rich",
    "markitdown",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
askanswer = "askanswer.cli:main"
# 重新 pip install -e 前也可用 `python -m askanswer.server` 启动（server.py 带 __main__ 守卫）。
askanswer-server = "askanswer.server:main"

[tool.setuptools.packages.find]
include = ["askanswer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# 保守起步的可全绿规则集：pyflakes(F)、pycodestyle 错误(E)、isort(I)。
# 后续可逐步加 B/UP/SIM 等；加规则前先跑 `ruff check askanswer --statistics`。
select = ["E", "F", "I"]
# E501(行宽)交给 formatter 处理，不在 lint 报错；存量长行不阻塞基线。
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["askanswer"]

