[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "askanswer"
version = "0.1.0"
description = "AskAnswer 命令行搜索助手"
requires-python = ">=3.10"
dependencies = [
    # --- Orchestration / LLM ---
    # Used across graph, nodes, tools, subgraphs (import: langchain, langchain_core, langgraph)
    "langchain>=1.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",  # sqlagent (SQLDatabase / SQLDatabaseToolkit)
    "langchain-openai>=0.3.0",  # default openai provider via init_chat_model (load.py)
    "langgraph>=1.1.5",
    "langgraph-checkpoint-sqlite>=2.0",  # persistence SqliteSaver
    "pydantic>=2.7",  # structured outputs (intents/base, helix, decision, research, registry)

    # --- Tools & protocols ---
    "mcp",  # MCP client (mcp.py) + helix FastMCP server (helix_mcp.py)
    "tavily-python",  # web search client (load.py → TavilyClient)
    "markitdown",  # read_file document conversion (tools.py)

    # --- CLI / runtime config ---
    "python-dotenv",  # .env loading (load.py)
    "rich",  # terminal UI (cli/render, theme, stream, commands/*)
    "prompt_toolkit>=3.0",  # REPL input (ui_input.py)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
# Soft imports in askanswer/telemetry/* (try/except ImportError → no-op).
# Install when enabling LangSmith / OTEL exporters:
#   pip install -e ".[telemetry]"
telemetry = [
    "langsmith",
    "opentelemetry-api",
]

[project.scripts]
askanswer = "askanswer.cli:main"
# 重新 pip install -e 前也可用 `python -m askanswer.server` 启动（server.py 带 __main__ 守卫）。
askanswer-server = "askanswer.server:main"

[tool.setuptools.packages.find]
include = ["askanswer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# 保守起步的可全绿规则集：pyflakes(F)、pycodestyle 错误(E)、isort(I)。
# 后续可逐步加 B/UP/SIM 等；加规则前先跑 `ruff check askanswer --statistics`。
select = ["E", "F", "I"]
# E501(行宽)交给 formatter 处理，不在 lint 报错；存量长行不阻塞基线。
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["askanswer"]
